# cowdisk

./: .dockerignore  .gitignore  CHANGELOG.md  COMMIT_CONVENTION.md  README.md
backend/: .env.example  alembic.ini  example.env  pyproject.toml  uvicorn_config.json
backend/app/: __init__.py  handle.py  main.py
backend/app/admin/controller/: auth.py  menu.py  role.py  user.py
backend/app/admin/dao/: menu.py  role.py  user.py
backend/app/admin/models/: menu.py  response.py  role.py  user.py
backend/app/admin/schemas/: auth.py  menu.py  role.py  user.py
backend/app/admin/services/: auth.py  menu.py  role.py  user.py
backend/app/api/: index.py
backend/app/api/v1/: main_router.py
backend/app/audit/: __init__.py  constants.py  decorator.py  middleware.py  models.py  repo.py  router.py  service.py  usecase.py  worker.py
backend/app/core/: audit_context.py  config.py  database.py  exception.py  fake_redis.py  init.py  logging.py  middleware.py  response.py
backend/app/crud/: base.py
backend/app/enum/: redis.py  user.py
backend/app/modules/: __init__.py
backend/app/scripts/: __init__.py  audit_cleanup.py  ensure_config_defaults.py  upload_gc.py
backend/app/shared/: __init__.py  deps.py  permission_match.py
backend/app/sql/: init.sql
backend/app/utils/: logger.py  password.py  response.py
backend/docs/: api-response-architecture.md  business-codes.md
backend/migrations/: env.py
backend/migrations/versions/: 20260210_add_config_audit.py  __init__.py
backend/tests/: test_audit_outbox.py  test_typed_config.py
docker/: Dockerfile  (+1 more)
(+310 files in other folders)
