[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "black>=25.12.0",
    "cryptography>=46.0.3",
    "fastapi-pagination>=0.15.6",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
]
