[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.2",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "black>=26.1.0",
    "cryptography>=46.0.4",
    "fastapi-pagination>=0.15.10",
    "fastapi[standard]>=0.128.6",
    "passlib>=1.7.4",
    "pyjwt>=2.11.0",
    "redis>=7.1.1",
    "sqlakeyset>=2.0.174",
    "sqlmodel>=0.0.32",
    "zipstream-ng>=1.9.0",
]
