[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.2",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "black>=26.1.0",
    "cryptography>=46.0.4",
    "fastapi-pagination>=0.15.10",
    "fastapi[standard]>=0.129.0",
    "passlib>=1.7.4",
    "pillow>=11.0.0",
    "pyjwt>=2.11.0",
    "redis>=7.2.0",
    "sqlakeyset>=2.0.174",
    "sqlmodel>=0.0.34",
    "zipstream-ng>=1.9.0",
]
